religion-Caste multiselection 90 % done

--- a/app/src/main/res/layout/tab_partner_preferences2.xml
+++ b/app/src/main/res/layout/tab_partner_preferences2.xml
@@ -8,6 +8,7 @@
     android:background="#00000000"  >
 
     <ScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dp"
@@ -764,17 +765,17 @@
                 <LinearLayout
 
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:layout_height="wrap_content"
                     android:background="#0c000000"
                     android:orientation="horizontal"
                     android:weightSum="2"
                     >
 
 
-                    <LinearLayout
+                   <!-- <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:weightSum="3"
                         android:orientation="vertical"
                         android:layout_marginLeft="5dp"
@@ -786,7 +787,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
-                            android:text="Religion:"
+                            android:text="Religion :"
                             android:fontFamily="Roboto-Regular"
                             android:textSize="16sp"
                             android:textColor="#4A4A4A"
@@ -812,16 +813,16 @@
                             android:fontFamily="Roboto-Regular"
                             android:textSize="16sp"
                             android:textColor="#4A4A4A"
-                            android:gravity="center_vertical"
+                            android:gravity="start"
                             />
 
 
-                    </LinearLayout>
+                    </LinearLayout>-->
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
                         android:orientation="vertical"
                         android:layout_marginRight="5dp"
                         android:layout_marginEnd="5dp"
@@ -834,47 +835,108 @@
                             <LinearLayout
                                 android:id="@+id/ll_religion_view"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="wrap_content"
                                 android:orientation="vertical"
                                 android:weightSum="3"
                                 android:visibility="visible">
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:weightSum="2"
+                                android:visibility="visible">
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:text="Religion :"
+                                    android:fontFamily="Roboto-Regular"
+                                    android:textSize="16sp"
+                                    android:textColor="#4A4A4A"
+                                    android:gravity="center_vertical"
+                                    />
+
                                 <TextView
                                     android:id="@+id/tv_religion"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="0dp"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
                                     android:gravity="center_vertical"
+                                    android:layout_marginBottom="5dp"
                                     />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:weightSum="2"
+                                android:visibility="visible">
 
                                 <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:text="MotherTongue :"
+                                    android:fontFamily="Roboto-Regular"
+                                    android:textSize="16sp"
+                                    android:textColor="#4A4A4A"
+                                    android:gravity="center_vertical"
+                                    />
+
+
+                            <TextView
                                     android:id="@+id/tv_mtongue"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="0dp"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
                                     android:gravity="center_vertical"
+                                android:layout_marginBottom="5dp"
                                     />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:weightSum="2"
+                                android:visibility="visible">
 
                                 <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:text="Caste / Division :"
+                                    android:fontFamily="Roboto-Regular"
+                                    android:textSize="16sp"
+                                    android:textColor="#4A4A4A"
+                                    android:gravity="start"
+                                    />
+
+                            <TextView
                                     android:id="@+id/tv_caste"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="0dp"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:text="Not Specified"
                                     android:fontFamily="Roboto-Regular"
                                     android:textSize="16sp"
                                     android:textColor="#4A4A4A"
                                     android:gravity="center_vertical"
+                                android:layout_marginBottom="5dp"
                                     />
-
+                            </LinearLayout>
 
 
                             </LinearLayout>
@@ -886,18 +948,35 @@
                                 android:orientation="vertical"
                                 android:weightSum="3"
                                 android:layout_marginTop="5dp"
-                                android:visibility="invisible">
+                                android:visibility="gone">
 
-                                <LinearLayout
+                          <!--      <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_marginBottom="0dp"
                                     android:orientation="vertical"
                                     android:layout_weight="1"
-                                    >
+                                    >-->
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="0dp"
+                                    android:orientation="horizontal"
+                                    android:weightSum="2">
+
+                                    <TextView
+                                        android:layout_width="0dp"
+                                        android:layout_height="match_parent"
+                                        android:layout_weight="1"
+                                        android:fontFamily="Roboto-Regular"
+                                        android:gravity="start"
+                                        android:text="Religion :"
+                                        android:textColor="#4A4A4A"
+                                        android:textSize="16sp" />
 
                                     <LinearLayout
-                                        android:layout_width="match_parent"
+                                        android:layout_width="0dp"
+                                        android:layout_weight="1"
                                         android:layout_height="match_parent"
                                         android:layout_gravity="center"
                                         android:layout_marginBottom="4dp"
@@ -931,16 +1010,33 @@
                                     </LinearLayout>
                                 </LinearLayout>
 
-                                <LinearLayout
+                                <!--<LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="0dp"
                                     android:layout_marginBottom="0dp"
                                     android:orientation="vertical"
                                     android:layout_weight="1"
-                                    >
+                                    >-->
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="0dp"
+                                    android:orientation="horizontal"
+                                    android:weightSum="2">
+
+                                    <TextView
+                                        android:layout_width="0dp"
+                                        android:layout_height="match_parent"
+                                        android:layout_weight="1"
+                                        android:fontFamily="Roboto-Regular"
+                                        android:gravity="start"
+                                        android:text="Mother Tongue :"
+                                        android:textColor="#4A4A4A"
+                                        android:textSize="16sp" />
 
                                     <LinearLayout
-                                        android:layout_width="match_parent"
+                                        android:layout_width="0dp"
+                                        android:layout_weight="1"
                                         android:layout_height="match_parent"
                                         android:layout_gravity="center"
                                         android:layout_marginBottom="4dp"
@@ -973,24 +1069,84 @@
                                     </LinearLayout>
                                 </LinearLayout>
 
-                                <LinearLayout
+
+
+
+                             <!--   <LinearLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="0dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_marginBottom="0dp"
                                     android:orientation="vertical"
                                     android:layout_weight="1"
                                     >
+-->
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="0dp"
+                                    android:orientation="horizontal"
+                                    android:weightSum="2">
 
+                                    <TextView
+                                        android:layout_width="0dp"
+                                        android:layout_height="match_parent"
+                                        android:layout_weight="1"
+                                        android:fontFamily="Roboto-Regular"
+                                        android:gravity="start"
+                                        android:text="Caste :"
+                                        android:textColor="#4A4A4A"
+                                        android:textSize="16sp" />
                                     <LinearLayout
-                                        android:layout_width="match_parent"
+                                        android:layout_width="0dp"
+                                        android:layout_weight="1"
                                         android:layout_height="match_parent"
                                         android:layout_gravity="center"
                                         android:layout_marginBottom="4dp"
                                         android:layout_marginTop="5dp"
                                         android:background="@drawable/home_spinner_border">
 
+                                        <FrameLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="match_parent">
 
-                                        <fr.ganfra.materialspinner.MaterialSpinner
+                                        <EditText
+                                            android:id="@+id/edt_sp_caste"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:enabled="false"
+                                            android:fadeScrollbars="false"
+                                            android:inputType="none"
+                                            android:overScrollMode="always"
+                                            android:scrollbarAlwaysDrawVerticalTrack="true"
+                                            android:scrollbarSize="50dp"
+                                            android:scrollbarStyle="insideInset"
+                                            android:scrollbars="vertical" />
+
+
+                                            <com.androidbuts.multispinnerfilter.MultiSpinner
+                                                android:id="@+id/sp_caste"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="match_parent"
+                                                android:layout_marginRight="15dp"
+                                                android:layout_marginEnd="15dp"
+                                                app:ms_alignLabels="false"
+                                                app:ms_arrowColor="#00000000"
+                                                app:ms_arrowSize="10dp"
+                                                app:ms_baseColor="#00000000"
+                                                app:ms_enableErrorLabel="false"
+                                                app:ms_enableFloatingLabel="false"
+                                                app:ms_errorColor="#FFFFFF"
+                                                app:ms_typeface="fonts/Roboto-Regular.ttf"
+                                                app:ms_hintTextSize="16sp"
+                                                app:ms_hint="Caste"
+                                                app:ms_hintColor="@color/black"
+                                                app:ms_multiline="false"
+                                                app:ms_thickness="0.5dp"
+                                                android:popupBackground="#e6e6e6"
+                                                android:popupElevation="@dimen/floating_label_bottom_spacing"
+                                                />
+
+                                    <!--    <fr.ganfra.materialspinner.MaterialSpinner
                                             android:id="@+id/sp_caste"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
@@ -1011,9 +1167,12 @@
                                             app:ms_thickness="0.5dp"
                                             android:popupBackground="#e6e6e6"
                                             android:popupElevation="@dimen/floating_label_bottom_spacing"
-                                            />
+                                            />-->
+                                        </FrameLayout>
                                     </LinearLayout>
                                 </LinearLayout>
+
+
                             </LinearLayout>
                         </FrameLayout>
                     </LinearLayout>
@@ -1446,8 +1605,6 @@
                 android:textAllCaps="false"
                 android:textColor="#4A4A4A"
                 android:textSize="16sp" />
-
-
 
                 <LinearLayout
                     android:id="@+id/ll_professional"
