--- a/app/src/main/res/layout/tab_home.xml
+++ b/app/src/main/res/layout/tab_home.xml
@@ -46,7 +46,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
                 <RadioButton
                     android:id="@+id/rb_bride"
                     android:layout_width="wrap_content"
@@ -72,6 +73,10 @@
                     android:textAlignment="center"
                     android:textStyle="bold"/>
             </RadioGroup>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
